@@ -1,3 +1,8 @@
+Tue Dec 19 20:52:17 2000  George Lebl <jirka@5z.com>
+
+	* logout.c, panel.c:  Make logout and lock also draggable, and move
+	  by default.
+
 Tue Dec 19 17:34:35 2000  George Lebl <jirka@5z.com>
 
 	* panel.c, launcher.[ch]:  Allow _MOVE of icons under a special
